--- a/wercker.yml
+++ b/wercker.yml
@@ -2,3 +2,6 @@ box: debian:stable-slim
 init:
   steps:
    - fly1tkg/git-commit-message@0.0.2
+build:
+  steps:
+   - fly1tkg/git-commit-message@0.0.2
