--- a/wercker.yml
+++ b/wercker.yml
@@ -2,4 +2,6 @@ box: debian:stable-slim
 init:
   steps:
    - fly1tkg/git-commit-message@0.0.2
-   - fly1tkg/git-commit-message@0.0.2
+deploy:
+  steps:
+    - iradu/git-tag-commit
