--- a/wercker.yml
+++ b/wercker.yml
@@ -4,4 +4,5 @@ init:
    - fly1tkg/git-commit-message@0.0.2
 deploy:
   steps:
-    - iradu/git-tag-commit
+   - fly1tkg/git-commit-message@0.0.2
+   - iradu/git-tag-commit
