--- a/wercker.yml
+++ b/wercker.yml
@@ -7,4 +7,5 @@ init:
    - fly1tkg/git-commit-message@0.0.2
 deploy:
   steps:
-   - iradu/git-tag-commit@0.0.3
+   - iradu/git-tag-commit@0.0.3:
+       message: $WERCKER_GIT_COMMIT_MESSAGE
