--- a/wercker.yml
+++ b/wercker.yml
@@ -8,7 +8,7 @@ init:
 deploy:
   steps:
    - iradu/git-tag-commit@0.0.3:
-       message: $WERCKER_GIT_COMMIT_MESSAGE
+       - message: $WERCKER_GIT_COMMIT_MESSAGE
    -script:
      name: Print WERCKER_GIT_COMMIT_MESSAGE
      code: |
