--- a/wercker.yml
+++ b/wercker.yml
@@ -9,6 +9,7 @@ deploy:
   steps:
    - iradu/git-tag-commit@0.0.3:
        message: $WERCKER_GIT_COMMIT_MESSAGE
+   - fly1tkg/git-commit-message@0.0.2
    - script:
      name: Print WERCKER_GIT_COMMIT_MESSAGE
      code: |
