--- a/wercker.yml
+++ b/wercker.yml
@@ -10,6 +10,7 @@ deploy:
    - fly1tkg/git-commit-message@0.0.2
    - iradu/git-tag-commit@0.0.4:
        message: $WERCKER_GIT_COMMIT_MESSAGE
+       commit: cdac988453357d970c9752bde39f24dd9475b28a
    - script:
      name: Print WERCKER_GIT_COMMIT_MESSAGE
      code: |
