--- a/wercker.yml
+++ b/wercker.yml
@@ -21,7 +21,7 @@ deploy:
     - iradu/git-tag-commit@0.0.7:
         message: $WERCKER_GIT_COMMIT_MESSAGE
         commit: cdac988453357d970c9752bde39f24dd9475b28aa
-        user: iradu
+        user: iradu2
         repository: test-tag-commit
         branch: master
     - script:
