--- a/wercker.yml
+++ b/wercker.yml
@@ -13,7 +13,7 @@ deploy:
   steps:
     - fly1tkg/git-commit-message@0.0.2
     - add-ssh-key:
-        keyname: $GIT_KEY
+        keyname: GIT_KEY
     - add-to-known_hosts:
         hostname: $GIT_HOST
         fingerprint: $GIT_FINGERPRINT
@@ -21,8 +21,8 @@ deploy:
     - iradu/git-tag-commit@0.0.8:
         message: $WERCKER_GIT_COMMIT_MESSAGE
         commit: 87a66ddd6d5443839a3dc46287f2cae5951a4248
-        user: iradu2
-        repository: test-tag-commit
+        user: iradu
+        repository: test-tag-commit2
         branch: master
     - script:
         name: Print WERCKER_GIT_COMMIT_MESSAGE
