--- a/wercker.yml
+++ b/wercker.yml
@@ -22,7 +22,7 @@ deploy:
         message: $WERCKER_GIT_COMMIT_MESSAGE
         commit: 87a66ddd6d5443839a3dc46287f2cae5951a4248
         user: iradu
-        repository: test-tag-commit2
+        repository: test-tag-commit
         branch: master
     - script:
         name: Print WERCKER_GIT_COMMIT_MESSAGE
