--- a/wercker.yml
+++ b/wercker.yml
@@ -16,7 +16,7 @@ deploy:
         type: $GIT_FINGERPRINT_TYPE
     - iradu/git-tag-commit@0.0.8:
         message: $WERCKER_GIT_COMMIT_MESSAGE
-        commit: 87a66ddd6d5443839a3dc46287f2cae5951a4248
+        commit: 8011d92ddb11104a6f4834dd2a60205b3b81b72b
         user: ionutradu-tm
-        repository: test-tag-commit
+        repository: add-commit-tag
         branch: master
